fix: cart-quantity align refactor: edit card <div>

--- a/all.css
+++ b/all.css
@@ -869,6 +869,7 @@ button:disabled {
 .cart-quantity {
   width: 40px;
   text-align:center;
+  vertical-align: top;
   border: 0;
   font-size: 20px;
 }
